added sha512 + hmac_sha512

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,6 +123,8 @@ add_library(mmx_iface SHARED
 	src/operation/Vote.cpp
 	src/sha256_avx2.cpp
 	src/sha256_ni.cpp
+	src/sha512.cpp
+	src/hmac_sha512.cpp
 )
 
 if(MSVC)
