--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -244,8 +244,8 @@ if(NOT MSVC)
 	target_link_libraries(mmx_db OpenMP::OpenMP_CXX)
 	target_link_libraries(mmx_modules OpenMP::OpenMP_CXX)
 	
-	set_source_files_properties(src/sha256_ni.cpp PROPERTIES COMPILE_FLAGS -msha)
-	set_source_files_properties(src/sha256_avx2.cpp PROPERTIES COMPILE_FLAGS -mavx2)
+	set_source_files_properties(src/sha256_ni.cpp PROPERTIES COMPILE_FLAGS "-mavx2 -msha")
+	set_source_files_properties(src/sha256_avx2.cpp PROPERTIES COMPILE_FLAGS "-mavx2")
 endif()
 
 if(OpenCL_FOUND)
