--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -268,7 +268,7 @@ add_executable(mmx_timelord_rewards src/mmx_timelord_rewards.cpp)
 add_executable(generate_passwd src/generate_passwd.cpp)
 add_executable(create_offer_binary src/contract/create_offer_binary.cpp)
 
-target_link_libraries(mmx mmx_iface)
+target_link_libraries(mmx mmx_iface mmx_vm)
 target_link_libraries(mmx_node mmx_modules)
 target_link_libraries(mmx_farmer mmx_modules)
 target_link_libraries(mmx_wallet mmx_modules)
