--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,6 +2,7 @@
 add_executable(test_engine test_engine.cpp)
 add_executable(test_mnemonic test_mnemonic.cpp)
 add_executable(test_database test_database.cpp)
+add_executable(test_transactions test_transactions.cpp)
 add_executable(create_test_contract create_test_contract.cpp)
 add_executable(create_test_contract2 create_test_contract2.cpp)
 
@@ -10,6 +11,7 @@ add_executable(vm_engine_tests vm/engine_tests.cpp)
 target_link_libraries(test_engine mmx_vm)
 target_link_libraries(test_mnemonic mmx_iface)
 target_link_libraries(test_database mmx_db mmx_iface)
+target_link_libraries(test_transactions mmx_modules)
 target_link_libraries(create_test_contract mmx_vm)
 target_link_libraries(create_test_contract2 mmx_vm)
 
