offer DB / api refactor + tune

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,6 +133,7 @@ add_library(mmx_iface SHARED
 	src/hmac_sha512.cpp
 	src/wordlist_en.cpp
 	src/mnemonic.cpp
+	src/offer_data_t.cpp
 )
 
 if(MSVC)
