--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,16 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 if(NOT MSVC)
 	add_compile_options(-Wall -Wno-unused-function)
-endif()
-
-if(MSVC)
+	if(ENABLE_MEM_SANITIZE)
+		message(STATUS "Compiling with -fsanitize=address")
+		add_compile_options(-fsanitize=address)
+		set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address")
+	elseif(ENABLE_THREAD_SANITIZE)
+		message(STATUS "Compiling with -fsanitize=thread")
+		add_compile_options(-fsanitize=thread)
+		set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=thread")
+	endif()
+else()
 	add_definitions(/openmp ${CUSTOM_ADD_DEFINITIONS})
 	
 	find_library(secp256k1_LIBRARY secp256k1 HINTS ${secp256k1_LIBRARIES})
