--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,6 +3,7 @@ add_executable(test_engine test_engine.cpp)
 add_executable(test_mnemonic test_mnemonic.cpp)
 add_executable(test_database test_database.cpp)
 add_executable(test_transactions test_transactions.cpp)
+add_executable(test_swap_algo test_swap_algo.cpp)
 add_executable(create_test_contract create_test_contract.cpp)
 add_executable(create_test_contract2 create_test_contract2.cpp)
 
@@ -12,6 +13,7 @@ target_link_libraries(test_engine mmx_vm)
 target_link_libraries(test_mnemonic mmx_iface)
 target_link_libraries(test_database mmx_db mmx_iface)
 target_link_libraries(test_transactions mmx_modules)
+target_link_libraries(test_swap_algo mmx_iface)
 target_link_libraries(create_test_contract mmx_vm)
 target_link_libraries(create_test_contract2 mmx_vm)
 
