--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,7 +10,7 @@ on:
 # Automatically cancel previous runs for the same ref (i.e. branch) and event type. The latter component prevents
 # manually dispatched events from being cancelled by pushes to the `master` branch.
 concurrency:
-  group: ${{ github.ref }}-${{ github.event_name }}
+  group: ${{ github.workflow }}-${{ github.ref }}-${{ github.event_name }}
   cancel-in-progress: true
 
 jobs:
