--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,10 +2,12 @@ name: CI
 
 on:
   push:
+    branches:
+      - '**'
     tags:
-      - '*'
-  schedule:
-      - cron: "0 4 * * *"
+      - '**'
+#   schedule:
+#       - cron: "0 4 * * *"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}-${{ github.event_name }}
