--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,6 +145,7 @@ add_library(mmx_iface SHARED
 	src/wordlist_en.cpp
 	src/mnemonic.cpp
 	src/offer_data_t.cpp
+	src/swap_info_t.cpp
 )
 
 if(MSVC)
