--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,6 +2,7 @@
 add_executable(test_engine test_engine.cpp)
 add_executable(test_mnemonic test_mnemonic.cpp)
 add_executable(test_database test_database.cpp)
+add_executable(test_compiler test_compiler.cpp)
 add_executable(test_transactions test_transactions.cpp)
 add_executable(test_swap_algo test_swap_algo.cpp)
 add_executable(create_test_contract create_test_contract.cpp)
@@ -13,6 +14,7 @@ add_executable(vm_engine_tests vm/engine_tests.cpp)
 target_link_libraries(test_engine mmx_vm)
 target_link_libraries(test_mnemonic mmx_iface)
 target_link_libraries(test_database mmx_db mmx_iface)
+target_link_libraries(test_compiler mmx_vm mmx_iface)
 target_link_libraries(test_transactions mmx_modules)
 target_link_libraries(test_swap_algo mmx_iface)
 target_link_libraries(create_test_contract mmx_vm)
