--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -294,10 +294,10 @@ target_link_libraries(create_offer_binary mmx_vm)
 target_link_libraries(create_swap_binary mmx_vm)
 target_link_libraries(create_plot_binary mmx_vm)
 
-install(TARGETS mmx_db DESTINATION bin)
-install(TARGETS mmx_vm DESTINATION bin)
-install(TARGETS mmx_iface DESTINATION bin)
-install(TARGETS mmx_modules DESTINATION bin)
+install(TARGETS mmx_db DESTINATION lib)
+install(TARGETS mmx_vm DESTINATION lib)
+install(TARGETS mmx_iface DESTINATION lib)
+install(TARGETS mmx_modules DESTINATION lib)
 
 install(TARGETS mmx DESTINATION bin)
 install(TARGETS mmx_node DESTINATION bin)
