--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -20,8 +20,20 @@ jobs:
     env:
       REGISTRY: ghcr.io
       IMAGE_NAME: ${{ github.repository }}
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - final-build-stage: 'base'
+            latest-tag-behaviour: auto
+            version-suffix: ''
+          - final-build-stage: amd
+            latest-tag-behaviour: false
+            version-suffix: '-amd'
+          - final-build-stage: nvidia
+            latest-tag-behaviour: false
+            version-suffix: '-nvidia'
     steps:
-
       - name: Checkout
         uses: actions/checkout@v3
         with:
@@ -32,6 +44,9 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          flavor: |
+            latest=${{ matrix.latest-tag-behaviour }}
+            suffix=${{ matrix.version-suffix }}
           tags: |
             type=edge
             type=semver,pattern={{version}}
@@ -51,6 +66,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
+          target: ${{ matrix.final-build-stage }}
           push: ${{ github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v') }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
