--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,6 +149,7 @@ add_library(mmx_iface SHARED
 	src/mnemonic.cpp
 	src/offer_data_t.cpp
 	src/swap_info_t.cpp
+	src/memo_t.cpp
 )
 
 add_library(mmx_vm SHARED
