--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,6 +5,8 @@ add_executable(test_database test_database.cpp)
 add_executable(test_compiler test_compiler.cpp)
 add_executable(test_transactions test_transactions.cpp)
 add_executable(test_swap_algo test_swap_algo.cpp)
+add_executable(test_database_reads test_database_reads.cpp)
+add_executable(database_fill database_fill.cpp)
 
 add_executable(mmx_tests mmx_tests.cpp)
 add_executable(vm_engine_tests vm/engine_tests.cpp)
@@ -15,6 +17,8 @@ target_link_libraries(test_database mmx_db mmx_iface)
 target_link_libraries(test_compiler mmx_vm mmx_iface)
 target_link_libraries(test_transactions mmx_modules)
 target_link_libraries(test_swap_algo mmx_iface)
+target_link_libraries(test_database_reads mmx_db mmx_iface)
+target_link_libraries(database_fill mmx_db mmx_iface)
 
 target_link_libraries(mmx_tests mmx_iface)
 target_link_libraries(vm_engine_tests mmx_vm)
