--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ concurrency:
 
 env:
   VCPKG_COMMIT_ID: "63366443439398a62afc9a63b34b9a3ba63b1cae"
-  CMAKE_BUILD_PRESET: "windows-release"
+  CMAKE_BUILD_PRESET: "gha-windows-release"
   MMX_VERSION: ${{ github.ref_name }}
   MMX_WIN_PACK: "TRUE"
   MMX_GIGAHORSE: "FALSE"
