--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(test_swap_algo test_swap_algo.cpp)
 add_executable(test_database_reads test_database_reads.cpp)
 add_executable(test_mem_hash test_mem_hash.cpp)
 add_executable(test_pos_compute test_pos_compute.cpp)
+add_executable(test_encoding test_encoding.cpp)
 add_executable(database_fill database_fill.cpp)
 
 add_executable(mmx_tests mmx_tests.cpp)
@@ -23,6 +24,7 @@ target_link_libraries(test_database_reads mmx_db mmx_iface)
 target_link_libraries(database_fill mmx_db mmx_iface)
 target_link_libraries(test_mem_hash vnx_base mmx_pos)
 target_link_libraries(test_pos_compute mmx_iface mmx_pos)
+target_link_libraries(test_encoding mmx_pos)
 
 target_link_libraries(mmx_tests mmx_iface)
 target_link_libraries(vm_engine_tests mmx_vm)
