Upload, ARM SHA256 (Rev01)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -154,6 +154,8 @@ add_library(mmx_iface SHARED
 	src/sha256_64_x8.cpp
 	src/sha256_ni.cpp
 	src/sha256_ni_rec.cpp
+	src/sha256_arm.cpp
+	src/sha256_arm_rec.cpp
 	src/sha512.cpp
 	src/hmac_sha512.cpp
 	src/wordlist_en.cpp
@@ -261,6 +263,12 @@ else()
 		set_source_files_properties(src/sha256_ni.cpp PROPERTIES COMPILE_FLAGS "-msse4.2 -msha")
 		set_source_files_properties(src/sha256_ni_rec.cpp PROPERTIES COMPILE_FLAGS "-msse4.2 -msha")
 		set_source_files_properties(src/sha256_avx2.cpp PROPERTIES COMPILE_FLAGS "-mavx2")
+	endif()
+
+	if(${CMAKE_HOST_SYSTEM_PROCESSOR} STREQUAL "aarch64")
+		message(STATUS "Enabling -march=armv8-a+crypto")
+		set_source_files_properties(src/sha256_arm.cpp PROPERTIES COMPILE_FLAGS "-march=armv8-a+crypto")
+		set_source_files_properties(src/sha256_arm_rec.cpp PROPERTIES COMPILE_FLAGS "-march=armv8-a+crypto")
 	endif()
 endif()
 
