mmx_postool + Prover work

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 add_executable(tx_bench tx_bench.cpp)
 add_executable(mmx_compile mmx_compile.cpp)
+add_executable(mmx_postool mmx_postool.cpp)
 add_executable(dump_table dump_table.cpp)
 add_executable(dump_binary dump_binary.cpp)
 add_executable(generate_passwd generate_passwd.cpp)
@@ -8,6 +9,7 @@ add_executable(calc_test_rewards calc_test_rewards.cpp)
 
 target_link_libraries(tx_bench mmx_iface)
 target_link_libraries(mmx_compile mmx_iface mmx_vm)
+target_link_libraries(mmx_postool mmx_iface mmx_pos)
 target_link_libraries(dump_table mmx_iface mmx_db)
 target_link_libraries(dump_binary mmx_iface mmx_vm)
 target_link_libraries(generate_passwd mmx_iface)
