--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,6 +13,7 @@ add_executable(database_fill database_fill.cpp)
 
 add_executable(mmx_tests mmx_tests.cpp)
 add_executable(vm_engine_tests vm/engine_tests.cpp)
+add_executable(vm_storage_tests vm/storage_tests.cpp)
 
 target_link_libraries(test_engine mmx_vm)
 target_link_libraries(test_mnemonic mmx_iface)
@@ -28,4 +29,5 @@ target_link_libraries(test_encoding mmx_pos)
 
 target_link_libraries(mmx_tests mmx_iface)
 target_link_libraries(vm_engine_tests mmx_vm)
+target_link_libraries(vm_storage_tests mmx_vm)
 
